# Ofenhed.github.io

./: CNAME  Cargo.toml  index.html  marcus.vcf
.github/workflows/: publish.yml
js-macro/: Cargo.toml
js-macro/src/: lib.rs
leptos_static_files/: Cargo.toml
leptos_static_files/src/: lib.rs
oembed/: Cargo.toml
oembed-macro/: Cargo.toml
oembed-macro/src/: lib.rs
oembed-type/: Cargo.toml
oembed-type/src/: lib.rs
oembed/src/: lib.rs
qr/: Cargo.toml
qr-macro/: Cargo.toml
qr-macro/src/: generator.rs  lib.rs
qr/src/: lib.rs
web/: Cargo.toml
web/src/: app.rs  contact.rs  cookie_consent.rs  helpers.rs  lib.rs  local_storage.rs  main.rs  third_party.rs
web/src/blog/: chat_control.rs  emails.rs  filter.rs  metadata.rs  mod.rs  path.rs  tags.rs  unremarkable.rs  why.rs
web/src/blog/ai/: mod.rs  not_even_dumb.rs  what_are_llms.rs
web/style/: boxxy.scss  carousel.scss  clog.scss  contact.scss  defines.scss  dialog.scss  hamburger-easter-egg.scss  hamburger.scss  lcars.scss  main.scss  nav.scss  quoting.scss  root.scss  space-hamburger.scss  third-party.scss
