[workspace]
members = ["web", "qr", "qr-macro"]
resolver = "3"

[workspace.dependencies]
axum = { version = "0.8.1" }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.44" }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
image = { version = "0.25" }
leptos = { version = "0.8" }
leptos_axum = { version = "0.8" }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
log = "0.4.22"
proc-macro2 = { version = "1.0.106" }
qrcode = { version = "0.14.1" }
quote = { version = "1.0.45" }
syn = "2.0.117"
thiserror = "2.0.12"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"], default-features = false }
wasm-bindgen = "0.2.93"
web-sys = "0.3.98"

[profile.release]
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
