[workspace]
members = ["web", "qr", "qr-macro", "js-macro"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", default-features = false }
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["std", "wasmbind", "alloc"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
getrandom = { version = ">= 0.3" }
image = { version = "0.25", default-features = false, features = ["png"] }
leptos = { version = "0.8" }
leptos_axum = "0.8"
leptos_meta = { version = "0.8", default-features = false, features = ["nonce"] }
leptos_router = { version = "0.8", default-features = false }
log = "0.4.22"
qrcode = { version = "0.14.1", default-features = false }
quote = "1.0.45"
swc = { version = "55", default-features = false }
swc_common = { version = "18", default-features = false }
syn = { version = "2.0.117", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.39", default-features = false }
wasm-bindgen = "0.2.93"
web-sys = "0.3.98"

[profile.release]
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
