[workspace]
members = ["web", "qr", "qr-macro", "js-macro", "leptos_static_files"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0"
any_spawner = { git = "https://github.com/Ofenhed/leptos", branch = "always-nonce" }
axum = { version = "0.8.1", default-features = false }
base64 = "0.22.1"
chrono = { version = "0.4.44", default-features = false, features = ["std", "wasmbind", "alloc"] }
console_error_panic_hook = "0.1.7"
console_log = "1.0"
futures = { version = "0.3", default-features = false }
hydration_context = { git = "https://github.com/Ofenhed/leptos", branch = "always-nonce" }
image = { version = "0.25", default-features = false, features = ["png"] }
leptos = { git = "https://github.com/Ofenhed/leptos", branch = "always-nonce", default-features = false }
leptos_axum = { git = "https://github.com/Ofenhed/leptos", branch = "always-nonce" }
leptos_integration_utils = { git = "https://github.com/Ofenhed/leptos", branch = "always-nonce" }
leptos_meta = { git = "https://github.com/Ofenhed/leptos", branch = "always-nonce", default-features = false }
leptos_router = { git = "https://github.com/Ofenhed/leptos", branch = "always-nonce", default-features = false }
log = "0.4.22"
qrcode = { version = "0.14.1", default-features = false }
quote = "1.0.45"
reactive_graph = "0.2"
strum = "0.28"
swc = { version = "55", default-features = false }
swc_common = { version = "18", default-features = false }
syn = { version = "2.0.117", default-features = false }
thiserror = "2.0.12"
tokio = { version = "1.39", default-features = false }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.98", default-features = false }

[profile.release]
panic = "abort"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
split-debuginfo = "packed"
debuginfo = "full"
strip = false
lto = true
codegen-units = 1
panic = "abort"
