[package]
name = "leptos_static_files"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
any_spawner.workspace = true
futures.workspace = true
hydration_context.workspace = true
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
log.workspace = true
reactive_graph = { workspace = true, features = ["sandboxed-arenas", "hydration"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
wasm-bindgen.workspace = true

[features]
default = ["tokio", "ssr"]
islands = ["leptos/islands"]
ssr = ["leptos_router/ssr", "leptos/ssr"]
tokio = ["dep:tokio", "any_spawner/tokio"]
