[package]
name = "leptos_static_files"
version = "0.1.1"
edition = "2024"

[lib]

[dependencies]
any_spawner.workspace = true
futures.workspace = true
hydration_context.workspace = true
leptos.workspace = true
leptos_integration_utils.workspace = true
leptos_meta = { workspace = true, optional = true }
leptos_router.workspace = true
log.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync"], optional = true }
wasm-bindgen.workspace = true

[features]
default = ["tokio", "meta"]
islands = ["leptos/islands"]
tokio = ["dep:tokio", "any_spawner/tokio"]
meta = ["dep:leptos_meta"]
