[package]
name = "qr-macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
image.workspace = true
qrcode = { workspace = true, features = ["image"] }
qr = { path = "../qr" }
quote.workspace = true
syn = { workspace = true, features = ["parsing", "proc-macro"] }
thiserror.workspace = true
