[package]
name = "conditionraise"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = { workspace = true, optional = true, features = ["tokio", "http1"] }
base64 = { workspace = true, optional = true }
console_error_panic_hook.workspace = true
console_log.workspace = true
chrono.workspace = true
getrandom = { workspace = true }
image = { workspace = true, optional = true }
js-macro = { path = "../js-macro" }
leptos = { workspace = true, features = ["rkyv"] }
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_static_files = { path = "../leptos_static_files", optional = true }
log.workspace = true
qr = { path = "../qr" }
qr-macro = { path = "../qr-macro" }
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], default-features = false, optional = true }
wasm-bindgen.workspace = true
web-sys = { workspace = true, optional = true, features = ["HtmlCanvasElement", "CanvasRenderingContext2d"] }

[build-dependencies]
cargo-leptos = "0.3.6"

[features]
default = []
hydrate = ["leptos/hydrate", "client-side"]
client-side = ["dep:web-sys", "dep:base64", "getrandom/wasm_js"]
ssr = [
  "dep:image",
  "dep:tokio",
  "leptos_static_files?/ssr",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
statics = [
  "ssr", "dep:leptos_static_files",
]
dev = ["ssr", "dep:axum", "dep:leptos_axum"]

[package.metadata.cargo-all-features]
denylist = ["axum", "tower", "tower-http", "tokio", "sqlx", "leptos_axum"]
skip_feature_sets = [["ssr", "hydrate", "dev"], []]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
#output-name = "ssr_modes"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
not-found-path = "target/site/404.html"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "assets"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3007"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with that tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["dev", "ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

lib-profile-release = "wasm-release"

js-minify = true
